@@ -45,6 +45,11 @@ user.
 <P>The constructor creates the progress bar using the position,
 size, and label.
 
+<P>You can set the background color with color() and the progress bar color with
+selection_color(), or you can set both colors together with color(unsigned bg, unsigned sel).
+
+<P>The default colors are FL_BACKGROUND2_COLOR and FL_YELLOW, resp.
+
 <H4><A name="Fl_Progress.~Fl_Progress">Fl_Progress::~Fl_Progress(void)</A></H4>
 
 <P>The destructor removes the progress bar.
