@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.1.10
 
+	- Fixed documentation for Fl_Progress (STR #2209)
 	- Fix for multiple popups, when dragging and calling fl_alert()
 	  and friends from the callback (STR #2159)
 	- Avoiding crashes for recursive common dialogs (this does not 
